# Slice-N-Splice

./: .codecov.yml  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  meson.build  meson_options.txt
doc/: sns.1
etc/: afl-fuzz.sh  lint.sh  mkobj.sh
etc/test-files/: Mach-O  ecoff.S  elf.S  macho.S
lgtm/cpp/: reinterpret-cast.ql
lgtm/cpp-queries/: reinterpret-cast.ql
src/: aout.cc  cli.cc  coff.cc  ecoff.cc  elf.cc  macho.cc  os360.cc  pe.cc  sns-tui.cc  utility.cc  xcoff.cc  zlib.cc
src/fuzz-harness/: afl-fuzzer.cc
src/include/: aout.hh  cli.hh  coff.hh  ecoff.hh  elf.hh  fd_t.hh  macho.hh  mmap_t.hh  os360.hh  pe.hh  sns-tui.hh  span.hh  utility.hh  xcoff.hh  zlib.hh
src/tests/: test-cli.cc  test-coff.cc  test-ecoff.cc  test-elf.cc  test-fd_t.cc  test-macho.cc  test-main.cc  test-mmap_t.cc  test-os360.cc  test-pe.cc  test-span.cc  test-utility.cc  test-xcoff.cc  test-zlib.cc
